o Removed resources plugin fomr life cycle definition cause   we can't offer supplemental files only via jlink o Usage of jar as well as jmod packaging for link. o Improved code o JLink plugin creates now a zip file of the resulting   image.
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk/maven-jlink-plugin@1797711 13f79535-47bb-0310-9956-ffa450edef68